team image on title overlap fixed

--- a/public/css/templatemo-scholar.css
+++ b/public/css/templatemo-scholar.css
@@ -1218,7 +1218,7 @@ Team Style
 
 .team {
     margin-top: 100px;
-    padding-top: 140px;
+    /* padding-top: 140px; */
 }
 
 .team-member {
@@ -1279,6 +1279,32 @@ Team Style
 .team-member .main-content ul li a:hover {
     background-color: #7a6ad8;
     color: #fff;
+}
+
+.team-title {
+    margin-top: 100px; /* Default for larger screens */
+}
+
+/* For tablets and smaller screens */
+@media (max-width: 991px) {
+    .team-title {
+        margin-top: 70px; /* Reduce margin for medium screens */
+    }
+}
+
+/* For small screens (phones in landscape) */
+@media (max-width: 767px) {
+    .team-title {
+        margin-top: 60px; /* Further reduce margin for smaller screens */
+    }
+}
+
+/* For extra small screens (phones in portrait) */
+@media (max-width: 575px) {
+    .team-title {
+        margin-top: 50px; /* Minimize margin for extra small screens */
+    }
+
 }
 
 /*
@@ -1877,7 +1903,7 @@ body {
         width: 95%;
     }
     .team {
-        margin-top: 160px;
+        margin-top: 80px;
     }
     .team-member {
         margin-bottom: 140px;
@@ -1990,7 +2016,6 @@ body {
     color: var(--light);
 }
 
-
 /* .video-container {
     position: relative;
     max-width: 100%;
@@ -2036,7 +2061,6 @@ body {
     width: 100%;
     height: 100%;
 }
-
 
 .show-video {
     color: whitesmoke;
